new component created

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -55,6 +55,9 @@
                   <li>
                     <a [routerLink]="['topics/ovservable-vs-promise']" data-filter-item data-filter-name="pluck">Observable vs Promise</a>
                   </li>
+                  <li>
+                    <a [routerLink]="['topics/objectmanipulation']" data-filter-item data-filter-name="pluck">Object-Manipulation</a>
+                  </li>
                 </ul>
               </div>
             </li>
