--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -58,6 +58,54 @@
                   <li>
                     <a [routerLink]="['topics/objectmanipulation']" data-filter-item data-filter-name="pluck">Object-Manipulation</a>
                   </li>
+                  <li>
+                    <a [routerLink]="['topics/defer']" data-filter-item data-filter-name="pluck">Defer</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/fromevent']" data-filter-item data-filter-name="pluck">FromEvent</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/exhaustmap']" data-filter-item data-filter-name="pluck">ExhaustMap</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/observeon']" data-filter-item data-filter-name="pluck">Observeon</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/constuctorvsngonit']" data-filter-item data-filter-name="pluck">Constuctorvsngonit</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/differentref']" data-filter-item data-filter-name="pluck">DifferentRef</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/paramsswitchmap']" data-filter-item data-filter-name="pluck">Different Switch Map</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/directives']" data-filter-item data-filter-name="pluck">Angular-Directives</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/changedetection']" data-filter-item data-filter-name="pluck">Angular-ChangeDetection-Strategey</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/encapsulation']" data-filter-item data-filter-name="pluck">Angular-Encapsulations</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/resolver']" data-filter-item data-filter-name="pluck">Resolver-Angular</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/componentfactory']" data-filter-item data-filter-name="pluck">Component-Factory-Angular</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/dynamic']" data-filter-item data-filter-name="pluck">DynamicComponent-Angular</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/parentchild']" data-filter-item data-filter-name="pluck">Parent-ChildCommuncation</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/childparent']" data-filter-item data-filter-name="pluck">Child-ParentCommunication</a>
+                  </li>
+                  <li>
+                    <a [routerLink]="['topics/subjecthttp']" data-filter-item data-filter-name="pluck">UseofSubjectinHttpService</a>
+                  </li>
                 </ul>
               </div>
             </li>
