--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -53,58 +53,58 @@
               <div class="sidebar-submenu">
                 <ul>
                   <li>
-                    <a [routerLink]="['topics/ovservable-vs-promise']" data-filter-item data-filter-name="pluck">Observable vs Promise</a>
+                    <a [routerLink]="['topics/ovservable-vs-promise']" data-filter-item data-filter-name="observable vs promise">Observable vs Promise</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/objectmanipulation']" data-filter-item data-filter-name="pluck">Object-Manipulation</a>
+                    <a [routerLink]="['topics/objectmanipulation']" data-filter-item data-filter-name="object manipulation">Object-Manipulation</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/defer']" data-filter-item data-filter-name="pluck">Defer</a>
+                    <a [routerLink]="['topics/defer']" data-filter-item data-filter-name="defer">Defer</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/fromevent']" data-filter-item data-filter-name="pluck">FromEvent</a>
+                    <a [routerLink]="['topics/fromevent']" data-filter-item data-filter-name="from event">FromEvent</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/exhaustmap']" data-filter-item data-filter-name="pluck">ExhaustMap</a>
+                    <a [routerLink]="['topics/exhaustmap']" data-filter-item data-filter-name="exhaust map">ExhaustMap</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/observeon']" data-filter-item data-filter-name="pluck">Observeon</a>
+                    <a [routerLink]="['topics/observeon']" data-filter-item data-filter-name="Observeon">Observeon</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/constuctorvsngonit']" data-filter-item data-filter-name="pluck">Constuctorvsngonit</a>
+                    <a [routerLink]="['topics/constuctorvsngonit']" data-filter-item data-filter-name="constuctor vs ngonit">Constuctorvsngonit</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/differentref']" data-filter-item data-filter-name="pluck">DifferentRef</a>
+                    <a [routerLink]="['topics/differentref']" data-filter-item data-filter-name="different ref">DifferentRef</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/paramsswitchmap']" data-filter-item data-filter-name="pluck">Different Switch Map</a>
+                    <a [routerLink]="['topics/paramsswitchmap']" data-filter-item data-filter-name="different switch map">Different Switch Map</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/directives']" data-filter-item data-filter-name="pluck">Angular-Directives</a>
+                    <a [routerLink]="['topics/directives']" data-filter-item data-filter-name="angular directives">Angular-Directives</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/changedetection']" data-filter-item data-filter-name="pluck">Angular-ChangeDetection-Strategey</a>
+                    <a [routerLink]="['topics/changedetection']" data-filter-item data-filter-name="angular change detection strategey">Angular-ChangeDetection-Strategey</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/encapsulation']" data-filter-item data-filter-name="pluck">Angular-Encapsulations</a>
+                    <a [routerLink]="['topics/encapsulation']" data-filter-item data-filter-name="angular encapsulations">Angular-Encapsulations</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/resolver']" data-filter-item data-filter-name="pluck">Resolver-Angular</a>
+                    <a [routerLink]="['topics/resolver']" data-filter-item data-filter-name="resolver angular">Resolver-Angular</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/componentfactory']" data-filter-item data-filter-name="pluck">Component-Factory-Angular</a>
+                    <a [routerLink]="['topics/componentfactory']" data-filter-item data-filter-name="component factory angular">Component-Factory-Angular</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/dynamic']" data-filter-item data-filter-name="pluck">DynamicComponent-Angular</a>
+                    <a [routerLink]="['topics/dynamic']" data-filter-item data-filter-name="dynamic component angular">DynamicComponent-Angular</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/parentchild']" data-filter-item data-filter-name="pluck">Parent-ChildCommuncation</a>
+                    <a [routerLink]="['topics/parentchild']" data-filter-item data-filter-name="parent-child communcation">Parent-ChildCommuncation</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/childparent']" data-filter-item data-filter-name="pluck">Child-ParentCommunication</a>
+                    <a [routerLink]="['topics/childparent']" data-filter-item data-filter-name="child-parent communication">Child-ParentCommunication</a>
                   </li>
                   <li>
-                    <a [routerLink]="['topics/subjecthttp']" data-filter-item data-filter-name="pluck">UseofSubjectinHttpService</a>
+                    <a [routerLink]="['topics/subjecthttp']" data-filter-item data-filter-name="use of subject in http service">UseofSubjectinHttpService</a>
                   </li>
                 </ul>
               </div>
