--- a/src/app/topics/child-parent-communication/child-parent-communication.component.html
+++ b/src/app/topics/child-parent-communication/child-parent-communication.component.html
@@ -1,6 +1,20 @@
 <main class="page-content">
-    <div class="container-fluid default-bar">
-      <h2>How to child Component to parent Component Communication Works in Angular? What is Practical Use of it? Please Provide Examples</h2>
-      <hr>
-    </div>
+  <div class="container-fluid default-bar">
+    <h2>Child to Parent communication</h2>
+    <p>
+      When we want to pass the data from the child component to the parent component, we use input binding with @Output decorations.
+      This approach is ideal when you want to share data changes that occur on things like button clicks, form entires, and other user events. In the parent, we create a function to receive the message and set it equal to the message variable.
+    </p>
+
+    <h3 class="mt-4">Hands-on link:</h3>
+        <hr>
+        <a href="https://stackblitz.com/edit/input-output-angular" target="_blank">stackblitz</a>
+        <a href="https://stackblitz.com/edit/angular-input-output-subject" target="_blank">stackblitz</a>
+    <h3 class="mt-4">Usefull links:</h3>
+    <hr>
+    <ul>
+        <li><a href="https://blog.hackages.io/angular-component-interaction-with-input-output-and-eventemitter-72526422b95c" target="_blank">hackages</a></li>
+        <li><a href="https://medium.com/@foolishneo/understanding-input-output-and-eventemitter-in-angular-c1aeb9fff594" target="_blank">medium</a></li>
+    </ul>
+  </div>
 </main>
