--- a/src/app/topics/constructorvsngoninit/constructorvsngoninit.component.html
+++ b/src/app/topics/constructorvsngoninit/constructorvsngoninit.component.html
@@ -2,5 +2,19 @@
     <div class="container-fluid default-bar">
       <h2>What is difference between ngOnInit vs Constructor in Angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <p>Constructor is used to create new instance of a class. ... The ngOnInit is called after the constructor is executed. In constructor Angular initializes and resolves all class members so in ngOnInit you can initialize work and logic of the component. ngOnInit guarantees that your bindings are readily available.</p>
+      <p>Note: Constructor is a property of class, not part of angular. Whereas onInit is an interface of angular which gets executed when the component inititated.</p>
+    
+      <h3 class="mt-4">Hands-on link:</h3>
+      <hr>
+      <a href="https://stackblitz.com/edit/angular-f64vew" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://www.angularjswiki.com/angular/what-is-the-difference-between-constructor-and-ngoninit-in-angular/#ngoninit-vs-constructor-in-angular" target="_blank">angularjswiki</a></li>
+          <li><a href="https://indepth.dev/the-essential-difference-between-constructor-and-ngoninit-in-angular/" target="_blank">indepth</a></li>
+      </ul>
+
     </div>
 </main>
