--- a/src/app/topics/parent-child-communication/parent-child-communication.component.html
+++ b/src/app/topics/parent-child-communication/parent-child-communication.component.html
@@ -1,6 +1,19 @@
 <main class="page-content">
     <div class="container-fluid default-bar">
-      <h2>How to  parent Component to child Component Communication Works in Angular? What is Practical Use of it? Please Provide Examples</h2>
+      <h2>Parent to child communication</h2>
+      <p>
+        When we want to pass the data from the parent component to the child component, we use input binding with @Input decorations.
+      </p>
+
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/angular-parent-to-child-communication?file=src%2Fapp%2Fchild%2Fchild.component.ts" target="_blank">stackblitz</a>
+          <a href="https://stackblitz.com/edit/angular-parent-child-interaction" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
       <hr>
+      <ul>
+          <li><a href="https://www.pluralsight.com/guides/angular-communication-between-components-input-output-properties" target="_blank">pluralsight</a></li>
+          <li><a href="https://fireship.io/lessons/sharing-data-between-angular-components-four-methods/" target="_blank">fireship</a></li>
+      </ul>
     </div>
 </main>
