--- a/src/app/topics/resolver/resolver.component.html
+++ b/src/app/topics/resolver/resolver.component.html
@@ -2,5 +2,21 @@
     <div class="container-fluid default-bar">
       <h2>What is Resolver in Angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <h4>Resolver</h4>
+      <p>
+        A Resolver is a class that implements the Resolve interface of Angular Router. In fact, Resolver is a service that has to be [provided] in the root module. Basically, a Resolver acts like middleware, which can be executed before a component is loaded.
+      </p>
+      <p>Router provides a resolve property that takes a route resolver and allows your application to fetch data before navigating to the route (i.e resolving route data).</p>
+      <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/angular-route-resolvers" target="_blank">stackblitz</a>
+      <h3 class="mt-4">Usefull links:</h3>
+      <hr>
+      <ul>
+          <li><a href="https://medium.com/better-programming/understanding-angular-resolver-what-was-the-problem-before-using-resolver-and-why-we-need-it-7502554ab7a3" target="_blank">medium</a></li>
+          <li><a href="https://codeburst.io/understanding-resolvers-in-angular-736e9db71267" target="_blank">codeburst</a></li>
+          <li><a href="https://www.techiediaries.com/angular-router-resolve/" target="_blank">techiediaries</a></li>
+      </ul>
     </div>
 </main>
