--- a/src/app/topics/defer/defer.component.html
+++ b/src/app/topics/defer/defer.component.html
@@ -2,5 +2,24 @@
     <div class="container-fluid default-bar">
       <h2>What is Defer in Angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+      <div class="row">
+        <div class="form-group col-md-12">
+          <p>Deferred is an object which exposes the promise. It has  mainly three methods resolve(), reject(), and notify(). Deferred returns promise object. When Deferred completes, You call methods either resolve(), reject(), and notify() . It calls callback register to either resolve(), reject(), or notify() according to how it has completed.
+          </p>
+          <p>Defer reates an Observable that, on subscribe, calls an Observable factory to make an Observable for each new Observer.</p>
+          <p>defer allows you to create the Observable only when the Observer subscribes, and create a fresh Observable for each Observer. It waits until an Observer subscribes to it, and then it generates an Observable, typically with an Observable factory function. It does this afresh for each subscriber, so although each subscriber may think it is subscribing to the same Observable, in fact each subscriber gets its own individual Observable.</p>
+          
+          <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/angular-gsn6qj?file=src%2Fapp%2Fapp.component.ts" target="_blank">stackblitz(check console for results)</a>
+          <h3 class="mt-4">Usefull links:</h3>
+          <hr>
+          <ul>
+              <li><a href="tothenew.com/blog/angularjs-deferred-promises-basic-understanding/" target="_blank">tothenew</a></li>
+              <li><a href="https://fdietz.github.io/recipes-with-angular-js/consuming-external-services/deferred-and-promise.html" target="_blank">fdietz</a></li>
+              <li><a href="https://stackoverflow.com/questions/41107783/when-to-use-q-defer-in-angularjs" target="_blank">stackoverflow</a></li>
+            </ul>
+        </div>
+      </div>
     </div>
 </main>
