--- a/src/app/topics/objectmanipulation/objectmanipulation.component.html
+++ b/src/app/topics/objectmanipulation/objectmanipulation.component.html
@@ -4,12 +4,11 @@
       <hr>
       <div class="row">
         <div class="form-group col-md-12">
-          <p>Difference between a promise and an observable is that a promise emits only a single value, whereas an observable emits multiple values. ... With a promise, on the other hand, the calling code also request a single value, but it doesn't block until the value is returned.</p>
+          <p>Please check <a [routerLink]="['/topics','differentref']">this</a></p>
           <h3 class="mt-4">Usefull links:</h3>
           <hr>
           <ul>
-              <li><a href="https://itnext.io/javascript-promises-vs-rxjs-observables-de5309583ca2" target="_blank">itnext</a></li>
-              <li><a href="https://medium.com/javascript-everyday/javascript-theory-promise-vs-observable-d3087bc1239a" target="_blank">medium</a></li>
+              <li><a href="https://medium.com/@sardanalokesh/understanding-dom-manipulation-in-angular-2b0016a4ee5d" target="_blank">medium</a></li>
           </ul>
         </div>
       </div>
