async pipe topic

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -41,6 +41,9 @@
                   <li>
                     <a [routerLink]="['topics/subscribe']" data-filter-item data-filter-name="subscribe">Subscribe</a>
                   </li>
+                  <li>
+                    <a [routerLink]="['topics/asyncpipe']" data-filter-item data-filter-name="subscribe">AsyncPipe</a>
+                  </li>
                 </ul>
               </div>
             </li>
