--- a/src/app/topics/difference-elementreftemplaterefcontainerref/difference-elementreftemplaterefcontainerref.component.html
+++ b/src/app/topics/difference-elementreftemplaterefcontainerref/difference-elementreftemplaterefcontainerref.component.html
@@ -21,8 +21,9 @@
 
       <h3 class="mt-4">Hands-on link:</h3>
           <hr>
-          <a href="https://viewcontainer-ref.stackblitz.io" target="_blank">stackblitz</a>
-          <a href="https://angular-wpupz3.stackblitz.io" target="_blank">stackblitz</a>
+          <div class="row"><a href="https://stackblitz.com/edit/viewcontainer-ref" target="_blank">viewcontainer-stackblitz</a></div>
+          <div class="row"> <a href="https://stackblitz.com/edit/angular-wpupz3" target="_blank">elementref-stackblitz</a></div>
+          
       <h3 class="mt-4">Usefull links:</h3>
       <hr>
       <ul>
