communication between components

--- a/src/app/topics/parent-child-communication/parent-child-communication.component.html
+++ b/src/app/topics/parent-child-communication/parent-child-communication.component.html
@@ -14,6 +14,8 @@
       <ul>
           <li><a href="https://www.pluralsight.com/guides/angular-communication-between-components-input-output-properties" target="_blank">pluralsight</a></li>
           <li><a href="https://fireship.io/lessons/sharing-data-between-angular-components-four-methods/" target="_blank">fireship</a></li>
+          <li><a href="https://medium.com/bb-tutorials-and-thoughts/communication-patterns-in-angular-9b0a829aa916">communication patterns in angular</a></li>
+          
       </ul>
     </div>
 </main>
