--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -107,6 +107,9 @@
                     <a [routerLink]="['topics/childparent']" data-filter-item data-filter-name="child-parent communication">Child-ParentCommunication</a>
                   </li>
                   <li>
+                    <a [routerLink]="['topics/interceptinput']" data-filter-item data-filter-name="interceptinput">How to Intercept Input</a>
+                  </li>
+                  <li>
                     <a [routerLink]="['topics/subjecthttp']" data-filter-item data-filter-name="use of subject in http service">UseofSubjectinHttpService</a>
                   </li>
                 </ul>
