--- a/src/app/topics/observeon/observeon.component.html
+++ b/src/app/topics/observeon/observeon.component.html
@@ -2,5 +2,42 @@
     <div class="container-fluid default-bar">
       <h2>What is ObserveOn in Angular? What is Practical Use of it? Please Provide Examples</h2>
       <hr>
+
+      <div class="row">
+        <div class="form-group col-md-12">
+          <p>observeOn is an operator that accepts a scheduler as a first parameter, which will be used to reschedule notifications emitted by the source Observable. It might be useful, if you do not have control over internal scheduler of a given Observable, but want to control when its values are emitted nevertheless.
+          </p>
+          <p>Returned Observable emits the same notifications (nexted values, complete and error events) as the source Observable, but rescheduled with provided scheduler. Note that this doesn't mean that source Observables internal scheduler will be replaced in any way. Original scheduler still will be used, but when the source Observable emits notification, it will be immediately scheduled again - this time with scheduler passed to observeOn. An anti-pattern would be calling observeOn on Observable that emits lots of values synchronously, to split that emissions into asynchronous chunks. For this to happen, scheduler would have to be passed into the source Observable directly (usually into the operator that creates it). observeOn simply delays notifications a little bit more, to ensure that they are emitted at expected moments.
+          </p>
+          <p>
+            As a matter of fact, observeOn accepts second parameter, which specifies in milliseconds with what delay notifications will be emitted. The main difference between delay operator and observeOn is that observeOn will delay all notifications - including error notifications - while delay will pass through error from source Observable immediately when it is emitted. In general it is highly recommended to use delay operator for any kind of delaying of values in the stream, while using observeOn to specify which scheduler should be used for notification emissions in general.
+          </p>
+          <h5 class="mt-4">Signature:</h5>
+          <p>observeOn {{'<'}}T{{'>'}}(scheduler: SchedulerLike, delay: number = 0): MonoTypeOperatorFunction {{'<'}}T{{'>'}}
+          </p>
+
+          <h5 class="mt-4">Parameters:</h5>
+          <p><b>scheduler: </b>Scheduler that will be used to reschedule notifications from source Observable.</p>
+          <p><b>delay: </b>Optional. Default is 0. Number of milliseconds that states with what delay every notification should be rescheduled.
+          </p>
+
+
+          <h5 class="mt-4">Returns:</h5>
+          <p>Observable that emits the same notifications as the source Observable, but with provided scheduler.</p>
+
+          
+          <h3 class="mt-4">Hands-on link:</h3>
+          <hr>
+          <a href="https://stackblitz.com/edit/rxjs-observe-on" target="_blank">stackblitz(check console for results)</a>
+          <h3 class="mt-4">Usefull links:</h3>
+          <hr>
+          <ul>
+              <li><a href="https://rxjs-dev.firebaseapp.com/api/operators/observeOn" target="_blank">rxjs</a></li>
+              <li><a href="https://xgrommx.github.io/rx-book/content/observable/observable_instance_methods/observeon.html" target="_blank">xgrommx</a></li>
+            </ul>
+        </div>
+      </div>
+
+
     </div>
 </main>
